# actix-boilerplate

./: .dockerignore  .env.example  .env.test  AI_MCP.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  README.md  SKILLS.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml  deploy-bare.yml  deploy-cpanel.yml
config/: default.toml  development.toml  production.toml
deploy/caddy/: Caddyfile
deploy/cpanel/: README.md
deploy/nginx/: nginx.conf
deploy/plesk/: README.md
deploy/systemd/: actix-app.service
docs/: configuration.md  cron.md  deployment.md  i18n.md  logging.md  modules.md
locales/ar/: common.ftl
locales/de/: common.ftl
locales/en/: common.ftl
migrations/: 20260101000001_create_users.sql  20260101000002_create_roles.sql  20260101000003_create_refresh_tokens.sql  20260101000004_create_audit_logs.sql  20260101000005_create_cron_job_logs.sql
scripts/: deploy.sh  setup-server.sh
src/: app.rs  config.rs  context.rs  errors.rs  main.rs
src/cron/: mod.rs
src/cron/jobs/: cleanup_expired_tokens.rs  mod.rs  send_digest_emails.rs  (+1 more)
src/db/: mod.rs
src/events/: auth_events.rs  mod.rs  user_events.rs
src/i18n/: loader.rs  mod.rs
src/middleware/: auth.rs  cors.rs  locale.rs  logger.rs  mod.rs  rate_limit.rs  request_id.rs  role.rs  security_headers.rs
src/modules/: mod.rs  registry.rs
src/openapi/: mod.rs
src/services/: email.rs  mod.rs  nats.rs  redis.rs  storage.rs  typesense.rs
src/utils/: audit.rs  feature_flags.rs  mod.rs  pagination.rs  password.rs
src/workers/: mod.rs  user_worker.rs
(+19 files in other folders)
