[package]
name = "actix-boilerplate"
version = "0.1.0"
edition = "2021"
authors = ["Enterprise Team"]
description = "Production-grade enterprise Actix-Web boilerplate"
license = "MIT"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
validator = { version = "0.18", features = ["derive"] }
config = "0.14"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
fred = { version = "9", features = ["default"] }
async-nats = "0.35"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
aws-sdk-s3 = "1"
aws-config = "1"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }
utoipa = { version = "4", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
tokio-cron-scheduler = "0.11"
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
bytes = "1"
governor = "0.6"
actix-web-prom = "0.8"
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"